[workspace]
resolver = "2"
members = [
    "crates/libs/*",
    "crates/samples/windows-sys/*",
    "crates/samples/windows/*",
    "crates/samples/components/*",
    "crates/targets/*",
    "crates/tests/misc/*",
    "crates/tests/winrt/*",
    "crates/tests/libs/*",
    "crates/tools/*",
]
exclude = [
    "crates/targets/baseline",
]

[profile.dev.package."*"]
opt-level = 2

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(windows_raw_dylib, windows_debugger_visualizer, windows_slim_errors)'] }

[workspace.dependencies]
helpers = { path = "crates/tools/helpers" }
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
rayon = { version = "1.10", default-features = false }
serde = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false }
toml = { version = "0.8", features = ["parse"] }
serde_json = {version = "1.0", default-features = false }
# generated dependencies
cppwinrt = { version = "0.2.2", path = "crates/libs/cppwinrt", default-features = false }
windows = { version = "0.61.1", path = "crates/libs/windows", default-features = false }
windows-bindgen = { version = "0.61.0", path = "crates/libs/bindgen", default-features = false }
windows-clang = { version = "0.0.0", path = "crates/libs/clang", default-features = false }
windows-collections = { version = "0.2.0", path = "crates/libs/collections", default-features = false }
windows-core = { version = "0.61.0", path = "crates/libs/core", default-features = false }
windows-ecma335 = { version = "0.0.0", path = "crates/libs/ecma335", default-features = false }
windows-future = { version = "0.2.0", path = "crates/libs/future", default-features = false }
windows-implement = { version = "0.60.0", path = "crates/libs/implement", default-features = false }
windows-interface = { version = "0.59.1", path = "crates/libs/interface", default-features = false }
windows-link = { version = "0.1.1", path = "crates/libs/link", default-features = false }
windows-numerics = { version = "0.2.0", path = "crates/libs/numerics", default-features = false }
windows-registry = { version = "0.5.1", path = "crates/libs/registry", default-features = false }
windows-result = { version = "0.3.2", path = "crates/libs/result", default-features = false }
windows-strings = { version = "0.4.0", path = "crates/libs/strings", default-features = false }
windows-sys = { version = "0.59.0", path = "crates/libs/sys", default-features = false }
windows-targets = { version = "0.53.0", path = "crates/libs/targets", default-features = false }
windows-version = { version = "0.1.4", path = "crates/libs/version", default-features = false }
