[workspace]
resolver = "2"
members = [
    "crates/libs/*",
    "crates/samples/windows-sys/*",
    "crates/samples/windows/*",
    "crates/samples/components/*",
    "crates/samples/csharp/*",
    "crates/samples/services/*",
    "crates/targets/*",
    "crates/tests/misc/*",
    "crates/tests/winrt/*",
    "crates/tests/libs/*",
    "crates/tools/*",
]
exclude = [
    "crates/targets/baseline",
]

[profile.dev.package."*"]
opt-level = 2

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(windows_raw_dylib, windows_slim_errors)'] }
missing_unsafe_on_extern = "warn"

[workspace.dependencies]
helpers = { path = "crates/tools/helpers" }
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false }
serde_json = {version = "1.0", default-features = false }
# generated dependencies
cppwinrt = { version = "0.3.4", path = "crates/libs/cppwinrt", default-features = false }
windows = { version = "0.62.2", path = "crates/libs/windows", default-features = false }
windows-bindgen = { version = "0.65.0", path = "crates/libs/bindgen", default-features = false }
windows-collections = { version = "0.3.2", path = "crates/libs/collections", default-features = false }
windows-core = { version = "0.62.2", path = "crates/libs/core", default-features = false }
windows-future = { version = "0.3.2", path = "crates/libs/future", default-features = false }
windows-implement = { version = "0.60.2", path = "crates/libs/implement", default-features = false }
windows-interface = { version = "0.59.3", path = "crates/libs/interface", default-features = false }
windows-link = { version = "0.2.1", path = "crates/libs/link", default-features = false }
windows-metadata = { version = "0.59.0", path = "crates/libs/metadata", default-features = false }
windows-numerics = { version = "0.3.1", path = "crates/libs/numerics", default-features = false }
windows-registry = { version = "0.6.1", path = "crates/libs/registry", default-features = false }
windows-result = { version = "0.4.1", path = "crates/libs/result", default-features = false }
windows-services = { version = "0.26.1", path = "crates/libs/services", default-features = false }
windows-strings = { version = "0.5.1", path = "crates/libs/strings", default-features = false }
windows-sys = { version = "0.61.2", path = "crates/libs/sys", default-features = false }
windows-targets = { version = "0.53.5", path = "crates/libs/targets", default-features = false }
windows-threading = { version = "0.2.1", path = "crates/libs/threading", default-features = false }
windows-version = { version = "0.1.7", path = "crates/libs/version", default-features = false }
