[workspace]
resolver = "3"
members = [
    "crates/libs/*",
    "crates/samples/*/*",
    "crates/targets/*",
    "crates/tests/*/*",
    "crates/tools/*",
]
exclude = [
    "crates/targets/baseline",
]

[profile.release]
lto = "thin"
strip = "debuginfo"

[profile.dev.package."*"]
opt-level = 2

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(windows_raw_dylib, windows_slim_errors)'] }
missing_unsafe_on_extern = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
type_complexity = "allow"
manual_c_str_literals = "allow" # windows-bindgen needs to switch to signed char for this to work
semicolon_if_nothing_returned = "warn"
map_unwrap_or = "warn"
manual_let_else = "warn"
uninlined_format_args = "warn"
redundant_clone = "warn"
implicit_clone = "warn"
single_match_else = "warn"
cloned_instead_of_copied = "warn"
manual_string_new = "warn"
manual_assert = "warn"
assigning_clones = "warn"
explicit_iter_loop = "warn"

[workspace.dependencies]
helpers = { path = "crates/tools/helpers" }
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false }
serde_json = {version = "1.0", default-features = false }
rustc-hash = { version = "2" }
# generated dependencies
cppwinrt = { version = "0.3.4", path = "crates/libs/cppwinrt", default-features = false }
riddle = { version = "0.0.0", path = "crates/libs/riddle", default-features = false }
windows = { version = "0.62.2", path = "crates/libs/windows", default-features = false }
windows-animation = { version = "0.0.0", path = "crates/libs/animation", default-features = false }
windows-bindgen = { version = "0.66.0", path = "crates/libs/bindgen", default-features = false }
windows-canvas = { version = "0.0.0", path = "crates/libs/canvas", default-features = false }
windows-collections = { version = "0.3.2", path = "crates/libs/collections", default-features = false }
windows-core = { version = "0.62.2", path = "crates/libs/core", default-features = false }
windows-future = { version = "0.3.2", path = "crates/libs/future", default-features = false }
windows-implement = { version = "0.60.2", path = "crates/libs/implement", default-features = false }
windows-interface = { version = "0.59.3", path = "crates/libs/interface", default-features = false }
windows-link = { version = "0.2.1", path = "crates/libs/link", default-features = false }
windows-metadata = { version = "0.60.0", path = "crates/libs/metadata", default-features = false }
windows-numerics = { version = "0.3.1", path = "crates/libs/numerics", default-features = false }
windows-rdl = { version = "0.0.0", path = "crates/libs/rdl", default-features = false }
windows-reactor = { version = "0.0.0", path = "crates/libs/reactor", default-features = false }
windows-reactor-setup = { version = "0.0.0", path = "crates/libs/reactor-setup", default-features = false }
windows-reference = { version = "0.1.0", path = "crates/libs/reference", default-features = false }
windows-registry = { version = "0.6.1", path = "crates/libs/registry", default-features = false }
windows-result = { version = "0.4.1", path = "crates/libs/result", default-features = false }
windows-services = { version = "0.26.1", path = "crates/libs/services", default-features = false }
windows-strings = { version = "0.5.1", path = "crates/libs/strings", default-features = false }
windows-sys = { version = "0.61.2", path = "crates/libs/sys", default-features = false }
windows-targets = { version = "0.53.5", path = "crates/libs/targets", default-features = false }
windows-threading = { version = "0.2.1", path = "crates/libs/threading", default-features = false }
windows-time = { version = "0.1.0", path = "crates/libs/time", default-features = false }
windows-version = { version = "0.1.7", path = "crates/libs/version", default-features = false }
