[package]
name = "windows_bindings"
version = "0.9.0"
authors = ["Microsoft"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Generates bindings for the Windows crate"

[dependencies]
windows_macros = { path = "../macros",  version = "0.9.0" }
windows_gen = { path = "../gen",  version = "0.9.0" }
