[package]
name = "cargo-winrt"
version = "0.7.0"
authors = ["Microsoft"]
edition = "2018"
license = "MIT"
description = "A simple utility for working with WinRT in a Rust project"
readme = "README.md"

[dependencies]
structopt = "0.3"
cargo_toml = "0.8"
tokio = "0.2"
reqwest = "0.10"
futures = "0.3"
thiserror = "1.0"
anyhow = "1.0"
zip = "0.5"
console = "0.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = { version = "1.4", default_features = false }
