[package]
name = "cargo-winrt"
version = "0.7.0"
authors = ["Microsoft"]
edition = "2018"
license = "MIT"
description = "A simple utility for working with WinRT in a Rust project"
readme = "README.md"

[dependencies]
pico-args = "0.3.2"
cargo_toml = "0.8"
curl = "0.4.30"
thiserror = "1.0"
anyhow = "1.0"
zip = { version = "0.5", default-features = false, features = ["deflate"] }
console = { version = "0.11", default-features = false }
serde_json = "1.0"
once_cell = "1.4"
