[package]
name = "cargo-winrt"
version = "0.7.2"
authors = ["Microsoft"]
edition = "2018"
license = "MIT"
description = "A simple utility for working with WinRT in a Rust project"
readme = "README.md"

[dependencies]
pico-args = "0.3"
thiserror = "1.0"
anyhow = "1.0"
zip = { version = "0.5", default-features = false, features = ["deflate"] }
console = { version = "0.12", default-features = false }
once_cell = "1.4"
winrt-deps = { path = "../winrt-deps", version = "0.1" }
curl = "0.4"
