[package]
name = "windows_macros"
version = "0.3.1"
authors = ["Microsoft"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Macros for the windows crate"

[lib]
proc-macro = true

[dependencies]
windows_gen = { path = "../gen", version = "0.3.1" }
windows_winmd = { path = "../winmd",  version = "0.3.1" }
syn = "1.0"
quote = "1.0"
squote = "0.1.2"
proc-macro2 = "1.0"
