[package]
name = "windows_macros"
version = "0.6.0"
authors = ["Microsoft"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Macros for the windows crate"

[lib]
proc-macro = true

[dependencies]
gen = { package = "windows_gen", path = "../gen", version = "0.6.0" }
syn = { version = "1.0", default-features = false, features = ["parsing", "proc-macro", "printing"] }
quote = "1.0"
squote = "0.1.2"
proc-macro2 = "1.0"
