[package]
name = "webview2_win32"
version = "0.8.0"
authors = ["Microsoft"]
edition = "2018"

[dependencies]
bindings = { package = "webview2_win32_bindings", path = "bindings" }
callback_macros = { path = "callback-macros" }
windows = { path = "../.." }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
