[package]
name = "test_winrt"
version = "0.5.0"
authors = ["Microsoft"]
edition = "2018"

[dependencies]
windows = { path = "../.." }
gen = { package = "windows_gen", path = "../../crates/gen",  version = "0.5.0" }

[dev-dependencies]
futures = "0.3"

[build-dependencies]
windows = { path = "../.." }
