[package]
name = "windows-bindgen"
version = "0.60.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
description = "Code generator for Windows metadata"
repository = "https://github.com/microsoft/windows-rs"
readme = "readme.md"

[dependencies]
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
