[package]
name = "windows-bindgen"
version = "0.65.0"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
description = "Code generator for Windows metadata"
repository = "https://github.com/microsoft/windows-rs"
categories = ["os::windows-apis"]
readme = "readme.md"

[dependencies]
windows-threading = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }

[dev-dependencies]
windows-link = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
