[package]
name = "windows-bindgen"
version = "0.66.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Code generator for Windows metadata"
repository = "https://github.com/microsoft/windows-rs"
categories = ["os::windows-apis"]
readme = "readme.md"

[dependencies]
windows-metadata = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }

[dev-dependencies]
windows-link = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
targets = []
