[package]
name = "windows-bindgen2"
version = "0.58.0"
authors = ["Microsoft"]
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
description = "Windows code generator"
repository = "https://github.com/microsoft/windows-rs"
readme = "readme.md"

[lints]
workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
