[package]
name = "windows-clang"
version = "0.0.0"
authors = ["Microsoft"]
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
description = "Windows clang parser"
repository = "https://github.com/microsoft/windows-rs"
readme = "readme.md"
categories = ["os::windows-apis"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[dependencies.windows-link]
version = "0.1.0"
path = "../link"
