[package]
name = "windows-clang"
version = "0.0.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
description = "Generates RDL from C/C++ headers using libclang"
repository = "https://github.com/microsoft/windows-rs"
categories = ["os::windows-apis"]
readme = "readme.md"

[lints]
workspace = true

[dependencies]
windows-rdl = { workspace = true }
windows-metadata = { workspace = true }
windows-threading = { workspace = true }
syn = { workspace = true, features = ["full", "parsing", "clone-impls", "printing", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
clang-sys = { version = "1.8.1", features = ["runtime", "clang_18_0" ] }
