[package]
name = "windows-collections"
version = "0.2.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
description = "Windows collection types"
repository = "https://github.com/microsoft/windows-rs"
readme = "readme.md"

[dependencies]
windows-core = { workspace = true }

[dev-dependencies]
windows-result = { workspace = true }
windows-strings = { workspace = true }

[features]
default = ["std"]
std = []

[lints]
workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
