[package]
name = "windows-composition"
version = "0.0.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
description = "Windows composition library"
repository = "https://github.com/microsoft/windows-rs"
categories = ["os::windows-apis"]
readme = "readme.md"

[dependencies]
windows-core = { workspace = true }
windows-numerics = { workspace = true }

[lints]
workspace = true
