[package]
name = "windows-composition"
version = "0.0.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
description = "Windows composition library"
repository = "https://github.com/microsoft/windows-rs"
categories = ["os::windows-apis"]
readme = "readme.md"

[features]
# The crate compiles against one composition stack, selected at build time.
# `system` (default) targets Windows.UI.Composition and can host a visual tree in
# a plain HWND. `lifted` targets the lifted Microsoft.UI.Composition stack for
# hosting inside a WinUI element: it swaps the generated bindings and drops the
# standalone-hosting surface. Lifted composition is only ever hosted through
# reactor, which enables this feature and layers the typed host bridge on top
# (see windows-reactor's `composition` feature). The two stacks are mutually
# exclusive.
default = ["system"]
system = ["dep:windows-window"]
lifted = []

[dependencies]
windows-core = { workspace = true }
windows-collections = { workspace = true }
windows-numerics = { workspace = true }
windows-time = { workspace = true }

[dependencies.windows-window]
workspace = true
optional = true

[lints]
workspace = true
