[package]
name = "windows-core"
version = "0.59.0"
authors = ["Microsoft"]
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
description = "Rust for Windows"
repository = "https://github.com/microsoft/windows-rs"
readme = "readme.md"
categories = ["os::windows-apis"]

[lints]
workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[dependencies.windows-targets]
version = "0.53.0"
path = "../targets"

[dependencies.windows-result]
version = "0.3.0"
path = "../result"
default-features = false

[dependencies.windows-strings]
version = "0.3.0"
path = "../strings"
default-features = false

[dependencies]
windows-implement = { path = "../implement",  version = "0.59.0" }
windows-interface = { path = "../interface",  version = "0.59.0" }

[features]
default = ["std"]
std = ["windows-result/std", "windows-strings/std"]
