[package]
name = "windows-core"
version = "0.62.2"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
description = "Core type support for COM and Windows"
repository = "https://github.com/microsoft/windows-rs"
categories = ["os::windows-apis"]
readme = "readme.md"

[dependencies]
windows-implement = { workspace = true, optional = true }
windows-interface = { workspace = true, optional = true }
windows-link = { workspace = true }
windows-result = { workspace = true }
windows-strings = { workspace = true }

[features]
default = ["std", "proc-macros"]
std = ["windows-result/std", "windows-strings/std"]
# Re-exports the `#[implement]` and `#[interface]` proc-macro attributes.
# Disable to drop the `syn`, `quote`, and `proc-macro2` build-time dependencies.
# Bindgen-generated bindings do not require this feature; only hand-written
# uses of `#[implement]` / `#[interface]` do.
proc-macros = ["dep:windows-implement", "dep:windows-interface"]

[lints]
workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
