[package]
name = "cppwinrt"
version = "0.3.2"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
description = "C++/WinRT"
repository = "https://github.com/microsoft/windows-rs"
readme = "readme.md"
categories = ["os::windows-apis"]

[dependencies]
windows-link = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
