[package]
name = "cppwinrt"
version = "0.3.4"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
description = "C++/WinRT"
repository = "https://github.com/microsoft/windows-rs"
categories = ["os::windows-apis"]
readme = "readme.md"

[dependencies]
windows-link = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
