[package]
name = "windows-define"
version = "0.33.0"
authors = ["Microsoft"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "The define macro for the windows crate"
repository = "https://github.com/microsoft/windows-rs"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[lib]
proc-macro = true

[dependencies]
