[package]
name = "windows-enclaves"
version = "0.0.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
description = "Virtualization-based security enclaves"
repository = "https://github.com/microsoft/windows-rs"
categories = ["os::windows-apis"]
readme = "readme.md"

[dependencies]
windows-link = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
