[package]
name = "windows-future"
version = "0.2.1"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
description = "Windows async types"
repository = "https://github.com/microsoft/windows-rs"
readme = "readme.md"

[dependencies]
windows-core = { workspace = true }
windows-link = { workspace = true }
windows-threading = { workspace = true }

[dev-dependencies]
windows-result = { workspace = true }

[features]
default = ["std"]
std = []

[lints]
workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
