[package]
name = "windows-future"
version = "0.3.2"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Windows async types"
repository = "https://github.com/microsoft/windows-rs"
categories = ["os::windows-apis"]
readme = "readme.md"

[dependencies]
windows-core = { workspace = true, default-features = false }
windows-link = { workspace = true }
windows-threading = { workspace = true }

[features]
default = ["std"]
std = ["windows-core/std", "windows-threading/std"]

[lints]
workspace = true

[package.metadata.docs.rs]
targets = []
