[package]
name = "windows-idl"
version = "0.0.0"
authors = ["Microsoft"]
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
description = "IDL parser library and ECMA-335 generator"
repository = "https://github.com/microsoft/windows-rs"
readme = "readme.md"
categories = ["os::windows-apis"]

[dependencies]
nom = "8"
nom_locate = "5"
