[package]
name = "windows-implement"
version = "0.35.0"
authors = ["Microsoft"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The implement macro for the windows crate"
repository = "https://github.com/microsoft/windows-rs"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", default-features = false, features = ["parsing", "proc-macro", "printing", "full", "derive"] }
tokens = { package = "windows-tokens", path = "../tokens", version = "0.35.0" }
