[package]
name = "windows-implement"
version = "0.60.2"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "The implement macro for the Windows crates"
repository = "https://github.com/microsoft/windows-rs"
categories = ["os::windows-apis"]
readme = "readme.md"

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["parsing", "proc-macro", "printing", "full", "clone-impls"] }

[dev-dependencies]
windows-core = { path = "../core" }

[lints]
workspace = true

[package.metadata.docs.rs]
targets = []

[lib]
proc-macro = true
