[package]
name = "windows-interface"
version = "0.59.3"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
description = "The interface macro for the Windows crates"
repository = "https://github.com/microsoft/windows-rs"
categories = ["os::windows-apis"]
readme = "readme.md"

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["parsing", "proc-macro", "printing", "full", "clone-impls"] }

[dev-dependencies]
windows-core = { path = "../core" }

[lints]
workspace = true

[package.metadata.docs.rs]
targets = []

[lib]
proc-macro = true
