[package]
name = "windows_macros"
version = "0.29.0"
authors = ["Microsoft"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Macros for the windows crate"
repository = "https://github.com/microsoft/windows-rs"

[lib]
proc-macro = true

[dependencies]
gen = { package = "windows_gen", path = "../gen", version = "0.29.0" }
reader = { package = "windows_reader", path = "../reader", version = "0.29.0" }
syn = { version = "1.0", default-features = false, features = ["parsing", "proc-macro", "printing", "full", "derive"] }
quote = { package = "windows_quote", path = "../quote", version = "0.29.0" }
