[package]
name = "windows-metadata"
version = "0.59.0"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
description = "Low-level metadata library for ECMA-335"
repository = "https://github.com/microsoft/windows-rs"
categories = ["os::windows-apis"]
readme = "readme.md"

[lints]
workspace = true
