[package]
name = "windows-metadata"
version = "0.60.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Low-level metadata library for ECMA-335"
repository = "https://github.com/microsoft/windows-rs"
categories = ["os::windows-apis"]
readme = "readme.md"

[lints]
workspace = true
